Fix #98583: Appending a particle system pulls in an unused collection

When setting a `ParticleSettings->instance_collection` but having
`ParticleSettings->render_type` something other than `PART_DRAW_GR`, the
collection would still be pulled in when appending. Same thing for
`ParticleSettings->instance_object` and `PART_DRAW_OB`.

This seems unnecessary, and since we do similar - conditional -
expansions with `BLO_expand`, this patch now only pulls in the object/
collection when actually used.